# VidOxide

./: .env.example  .gitignore  Cargo.toml  DETECTION_SUMMARY.md  DETECTION_TEST.md  FRIGATE_CLI_TEST.md  MACOS_TROUBLESHOOTING.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START_DETECTION.md  README.md  START_HERE.md  TEST_COMMANDS.md  TEST_RESULTS.md  WEBCAM_SETUP.md  quick-test.sh  run-cli-mac.sh  start.sh  stream-webcam.sh
apps/detection-monitor/: Cargo.toml  README.md
apps/detection-monitor/src/: main.rs
apps/frigate-agent/: Cargo.toml  Dockerfile
apps/frigate-agent/src/: config.rs  main.rs  mqtt.rs  web.rs
apps/frigate-cli/: Cargo.toml  Dockerfile
apps/frigate-cli/src/: main.rs
compose/: docker-compose.yml  frigate.yml  mediamtx.yml  mosquitto-no-auth.conf
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  RUNBOOKS.md  TROUBLESHOOTING.md
infra/: Makefile
infra/scripts/: fetch_media.sh  health.sh  validate.sh
media/: README.txt
