[package]
name = "frigate-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"